--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 10px;
+    gap: 20px;
 }
 .footer{
     padding: 30px;
